--- a/src/assets/css/main.less
+++ b/src/assets/css/main.less
@@ -2,7 +2,7 @@ html,body {
 	margin: 0;
 	padding: 0;
 	border: 0;
-	font-size: 14px;
+	// font-size: 20px;
 }
 body {
 	background: #f5f5f3;
@@ -13,6 +13,7 @@ body {
  /* Safari */
 }
 body * {
+	font-size: @primaryFontSize;
 	-webkit-user-select: none;
   /*默认字体*/
 	font-family: helvetica;
