--- a/src/assets/css/them.less
+++ b/src/assets/css/them.less
@@ -1,3 +1,11 @@
-@primaryFontSize: 30px;
+// 字体大小
+@miniFontSize: 20px;
+@smallFontSize: 30px; 
+@primaryFontSize: 40px;
+@mediumFontSize: 50px;
+@bigFontSize: 60px;
+
+// 颜色变量
 @primaryColor: #aaa;
-@warningColor: rgb(0, 153, 255);
+@warningColor: rgb(172, 211, 236);
+
