提交页面布局

--- a/src/assets/css/main.less
+++ b/src/assets/css/main.less
@@ -16,7 +16,7 @@ body {
  /* Safari */
 }
 body * {
-	font-size: @primaryFontSize;
+	font-size: @smallFontSize;
 	-webkit-user-select: none;
   /*默认字体*/
 	font-family: helvetica;
