--- a/src/assets/css/thems/fierys/activity.less
+++ b/src/assets/css/thems/fierys/activity.less
@@ -20,9 +20,11 @@
             color: rgba(255,255,255,1);
         }
         .tip{
+            // 时间字体颜色
             color: rgba(244,72,72,1);
         }
         .time_to{
+            // 截至时间字体颜色
             color: rgba(101,59,28,1);
         }
     }
@@ -52,6 +54,7 @@
         color: rgba(255,255,255,1);
     }
     .corner_marker p{
+        // 角标字体颜色
         color: rgba(255,255,255,1);
     }
 }
