--- a/src/assets/css/thems/fierys/activity.less
+++ b/src/assets/css/thems/fierys/activity.less
@@ -38,7 +38,7 @@
         box-shadow:0px 5px 0px 0px rgba(255,134,107,1);
         .main_title{
             // 标题颜色
-            color: rgba(172,15,15,1);
+            color: rgb(15, 172, 94);
         }
         .second_title{
             // 原价颜色
