--- a/src/assets/css/thems/legends/activity.less
+++ b/src/assets/css/thems/legends/activity.less
@@ -1,12 +1,5 @@
+// 充值活动
 .rechargeActivities{
-    .rechar_banner{
-        // banner背景颜色
-        background-color: rgba(255,161,138,1);
-    }
-    .rechar_box{
-        // 内容背景颜色
-        background-color: rgba(255,161,138,1);
-    }
     .rechar_money{
         // 金额字体颜色
         color: rgba(240,83,83,1);
@@ -27,11 +20,6 @@
             // 截至时间字体颜色
             color: rgba(101,59,28,1);
         }
-    }
-    .time_silder{
-        // 时间条颜色
-        background: rgba(255,140,135,1);
-        box-shadow: 0px -1px 2px 0px rgba(205,72,72,1) inset;
     }
     .rechar_item{
         background: rgba(255,255,255,1);
@@ -62,4 +50,108 @@
         }
     }
     
+}
+// 新人福利
+.newPersonBenefits{
+    .money_bg{
+        background: url('../../../images/money.png') no-repeat center;
+    }
+    .title_img1{
+        background: url('../../../images/gtitle1.png') center;
+    }
+    .title_img2{
+        background: url('../../../images/gtitle2.png') center;
+    }
+    .title_img3{
+        background: url('../../../images/gtitle3.png') center;
+    }
+    .title_img4{
+        background: url('../../../images/gtitle4.png') center;
+    }
+    .title_detail{
+        color: #FFFFF4;
+    }
+    .gift_bg1{
+        background: url('../../../images/gift1bg.png')no-repeat center;
+    }
+    .status{
+        background: url('../../../images/giftstatus1.png')no-repeat center;
+    }
+    .book_img{
+        background: url('../../../images/book.png')no-repeat center;
+    }
+    .money_icon{
+        background: url('../../../images/money.png')no-repeat center;
+    }
+    .box3_li{
+        background: url('../../../images/gmoneybg.png')no-repeat center;
+    }
+    .time_num{
+        .num{
+            background-color: #ffffff;
+            color: #A00002;
+        }
+        .tip{
+            color: #ffffff;
+        }
+    }
+    .gift_box1, 
+    .gift_box2 li,
+    .gift_box3,
+    .gift_box4{
+        background-color: #FFF8F8;
+    }
+    .gift_bg1{
+        .btnWord{
+            color: #ED5741;
+        }
+        .content{
+            span:nth-child(1){
+                color: #d94c3d;
+              }
+              span:nth-child(2){
+                color: #d94c3d;
+              }
+              p{
+                color: #C19EA1;
+              }
+        }
+    }
+    .gift_box2{
+        .book_cont{
+            span{
+                color: #D7524B;
+            }
+            .book_time{
+                color: #EB5D56;
+            }
+        }
+    }
+    .gift_box3{
+        .box3_top{
+            p:nth-child(1){
+                color: #D6443C;
+            }
+            p:nth-child(2){
+                color: #E7BEC1;
+            }
+        }
+        .box3_buttom{
+            color: #ffffff;
+        }
+        
+    }
+    .gift_box4{
+        .box4_left{
+            .left_title span{
+                color: #C5514B;
+            }
+            .left_detail{
+                color: #CA8480;
+            }
+        }
+    }
+    .rechar_footer{
+        color: #ffffff;
+    }
 }
