--- a/src/assets/css/thems/legends/components.less
+++ b/src/assets/css/thems/legends/components.less
@@ -1,4 +1,4 @@
-// 弹出框
+// 充值活动弹出框
 .pop_box{
     .pop_content{
         background: rgba(255,255,255,1);
@@ -10,9 +10,15 @@
         }
     }
 }
-// 背景按钮
-.img_btn{
-    .btn_word{
-        color: rgba(255,255,255,1);
+// 新人福利弹框
+.gift_popup{
+    .pop_content{
+        background: url('../../../images/giftpopbg.png')no-repeat center;
+        .pop_header{
+            background: url('../../../images/congratulations.png')no-repeat center;
+        }
+    }
+    .close_btn{
+        background: url('../../../images/closeBottom.png')no-repeat center;
     }
 }
