--- a/src/assets/css/main.less
+++ b/src/assets/css/main.less
@@ -2,7 +2,7 @@ html,body {
 	margin: 0;
 	padding: 0;
 	border: 0;
-	height: 100%;
+	// height: 100%;
 	// font-size: 20px;
 }
 body {
@@ -78,3 +78,8 @@ a,button,input,textarea {
 input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
 	-webkit-appearance: none !important;
 }/* chrome and safari */
+
+input{
+    -webkit-user-select:auto!important;
+    user-select:auto!important;
+}
